cmake_minimum_required(VERSION 3.17)
project(BASILISK_SAT_SOLVER CXX)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)

include_directories(.)

set(CMAKE_CXX_STANDARD 17)

add_executable(basilisk-sat-solver main.cc)